# WaveGen

./: .gitignore  Cargo.toml  README.md  index.html
assets/: sw.js
src/: lib.rs  main.rs
src/app/: mod.rs  waves.rs  widgets.rs
src/app/waves/: mod.rs  state_edit.rs  type_change.rs  value.rs  wtype.rs
src/app/windows/: import.rs  mod.rs  project_export.rs  project_settings.rs
src/app/windows/import/: mod.rs
templates/: test.hbs
