[package]
name = "wave_gen"
version = "0.1.0"
authors = ["Nrot <nrot13@gmail.com>"]
edition = "2021"
rust-version = "1.69"


[dependencies]
# egui = "0.22.0"
egui = {git="https://github.com/nrot/egui.git"}
eframe = { git = "https://github.com/nrot/egui.git", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
# eframe = { version = "0.22.0", default-features = false, features = [
#     "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
#     "default_fonts", # Embed the default egui fonts.
#     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
#     "persistence",   # Enable restoring app state when restarting the app.
# ] }

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
log = "0.4.17"
fern = { version = "0.6.2", features = ["colored", "chrono"] }
chrono = "0.4.24"
rfd = "0.11.4"
handlebars = "4.3.7"
num_cpus = "1.15.0"
miette = { version = "5.9.0" }
anyhow = "1.0.71"
zip = "0.6.6"
ron = "0.8.0"
vcd = {git="https://github.com/nrot/rust-vcd"}

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 0


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
